--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
